# pc28touzhu

./: .dockerignore  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  docker-compose.yml  fake_executor.py  pc28  pc28touzhu.db-journal  platform_alert_notifier.py  platform_auto_trigger.py  platform_source_sync.py  pyproject.toml  seed_demo.py  sitecustomize.py  telegram_daily_reporter.py  telegram_executor.py  telegram_profit_bot.py
.github/workflows/: docker-image.yml
adapters/: README.md
deploy/systemd/: README.md  pc28-python.sh  pc28ctl.sh  pc28touzhu-alert-notifier.service  pc28touzhu-auto-trigger.service  pc28touzhu-pc28-auto-settlement.service  pc28touzhu-platform.service  pc28touzhu-source-sync.service  pc28touzhu-telegram-bot.service  pc28touzhu-telegram-executor@.service  (+1 more)
docs/: AITRADINGSIMULATOR_INTEGRATION.md  AITRADINGSIMULATOR_SOURCE_TEMPLATE.json  API_CONTRACT.md  ARCHITECTURE.md  DOMAIN_MODEL.md  PRODUCT_UX_REDESIGN.md  SIGNAL_PROTOCOL.md
executor/: README.md
migrations/: README.md
platform/: README.md
tests/: README.md  __init__.py  test_alert_notification_service.py  test_api.py  test_auto_trigger_service.py  test_config.py  test_executor.py  test_executor_runtime.py  test_pc28_auto_settlement_service.py  test_pc28_draw_service.py  test_repository.py  test_runtime_environment.py  test_settlement_rules.py  test_source_fetch.py  test_source_sync_service.py  test_telegram_account_gateway.py  test_telegram_bot_sender.py  test_telegram_bot_service.py  test_telegram_report_service.py  test_telegram_runtime_settings_service.py
(+80 files in other folders)
