[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pc28touzhu"
version = "0.1.0"
description = "PC28 投注信号平台与 Telegram 执行器骨架"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
telegram = ["Telethon>=1.42,<2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
